...
          for (final d in s.docs)
            Membre(
              d.id,
              d.data()['prenom'] as String,
              d.data()['role'] as String,
              enAttente: d.data()['role'] == 'benevole' &&
                  d.data()['nomme'] == true,
            ),
        ];
        liste.sort((a, b) {
          if (a.estResponsable != b.estResponsable) {
            return a.estResponsable ? -1 : 1;
          }
...
